Updated JDialogue to JDK11/JavaFX11 and began work on highlighting functionality. Be sure to add the correct VM arguments listed in JDialogueCore's header to your run configuration!